# HPC-Prototyping

./: .gitignore  README.md  UsefulFunctions.cpp
Algorithms/PermutationTesting_CPU/: CMakeLists.txt  PermTesting_Iterative.cpp  PermTesting_Matrix.cpp  PermTesting_SparseMatrix.cpp  TestMatrixMult.cpp  TestMaxT.cpp
Algorithms/PermutationTesting_CUDA/: CMakeLists.txt  PermTesting-Kernel.cu  PermTesting.cpp
Algorithms/PermutationTesting_GPU/: CMakeLists.txt  PermTesting.cpp  PermTesting_AFMatrix.cpp
Algorithms/PermutationTesting_OpenMP/: CMakeLists.txt  PermTesting_CPU.cpp  PermTesting_Matrix.cpp
Charm++/: README.md
Charm++/ArrayHello/: Makefile  arrayHello
Charm++/Jacobi2D/: jacobi.cpp
Charm++/hello/: Makefile  main.C  main.ci  main.h
Libraries/ArrayFire/: CMakeLists.txt  TestMatrixMult.cpp
Libraries/VienaCL/: CMakeLists.txt  TestVienaCL.cpp
Matlab/: testParFor.m
MultiGPUExperiments/HelloMPICUDA/: Makefile  README  hello.c  hello.cu  hello.h
MultiGPUExperiments/MultiNode/pi-mpi-cuda/: CMakeLists.txt  pi-mpi-1.c  pi-mpi-1.pbs  pi-mpi-2.c  pi-mpi-2.pbs  pi-mpi-cuda.cpp  pi-mpi-cuda.cu  pi-mpi-cuda.h  pi-mpi-cuda.pbs  pi-mpi.c  pi-mpi.h  pi-sync-data-1.c  pi-sync-data-1.h  pi-sync-data-2.c  pi-sync-data-2.h
MultiGPUExperiments/SingleNode/diffusion/: CMakeLists.txt  diffusion-kernel-cuda.cu  diffusion-kernel-serial.cpp  diffusion-kernel.h  diffusion-serial.cpp  oldFunctions.cpp  utils.cpp  utils.h
MultiGPUExperiments/SingleNode/pi/: CMakeLists.txt  pi-kernel-copy.cu  pi-kernel.cu  pi-kernel.h  pi.cpp
UnifiedMemoryExperiments/CalculatePi/: .gitignore  CMakeLists.txt  PerformanceComparison.pptx  README.m  README.md  pi-NonUnifiedMem-kernel.cu  pi-NonUnifiedMem.cpp  pi-UnifiedMem-kernel.cu  pi-UnifiedMem.cpp  pi-kernel-unified.cpp  pi-kernel-unified.cu  pi-kernel-useThrust.cu  pi-kernel.cpp  pi-kernel.cu  pi-kernel.cuh  pi-kernel.cxx  pi.cpp  run.sh
UnifiedMemoryExperiments/CalculatePi/old/: pi-NonUnifiedMem.cpp
UnifiedMemoryExperiments/CalculatePi/presentation/: PerformanceComparisson.pptx
mpi/hello/: hello-mpi.c
